Ensure main has equal padding on mobile

--- a/public/main.css
+++ b/public/main.css
@@ -672,7 +672,7 @@ main:has(.cover) footer {
 	}
 	main {
 		padding-top: 5rem;
-		padding-right: 2rem;
+		padding-right: 2rem !important;
 	}
 	#files .cell.stat {
 		display: none;
